# nn_audio

./: .gitignore  README.md  audio_model  install.sh  mp3toWav.py  myproject.toml  readfile.m  requirements.txt  rnn.h5  setup.cfg
Matlab Scripts/: bytes.m  checkFS.m  generator.m  makeNoiseData.asv  makeNoiseData.m  mp3toWav.asv  mp3toWav.m  padData.m  prepareDataset.m  putNoise.asv  putNoise.m  test.m  tst.m  varietyNoises.asv  varietyNoises.m  wav2txt.asv  wav2txt.m
Python Scripts/: app.py  firstTry.py  mp3toWav.py  nn-techno.ipynb  techno_or_not_model.ipynb  techno_training.ipynb  write-data-txt.ipynb
dataset-techno/: readfile.m
dataset-techno/mp3/: renameFiles.py
main_pkg/src/: app.py
