[metadata]
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = Haki-Malai
author_email = hakimalaj@hotmail.com
description = A tool for making an audio classifier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Haki-Malai/nn-techno
project_urls =
    Bug Tracker = https://github.com/Haki-Malai/nn-techno/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Ubuntu

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src